# taterfs-rs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECISIONS.md  HowToClaude.md  NOTES.md  PLANS.md  README.md
.claude/: settings.local.json
docs/architecture/: app.md  backend_interfaces.md  backend_storage_model.md  caches.md  cli.md  commands.md  completes.md  configuration.md  dir_tree_mod.md  download.md  file_sources.md  file_stores.md  flow_control.md  list_builder.md  list_modifier.md  list_search.md  merge.md  repo_model.md  repository_interface.md  repository_specification.md  sync.md  upload.md  upload_download.md
old-src/file_source/: file_source.rs  fs_file_source.rs  mod.rs
old-src/repo/: fs_repo_backend.rs  mod.rs  repo.rs  repo_backend.rs  repo_backend2.rs  repo_directory_builder.rs  repo_file_builder.rs  repo_model.rs  s3_repo_backend.rs  sync_repo_directory_builder.rs  sync_repo_file_builder.rs
old-src/samples/: sample2.rs  sample3.rs
old-src/util/: futures_queue.rs  mod.rs
src/: capacity_manager.rs  cli.rs  context.rs  file_store.rs  fs_file_store.rs  lib.rs  main.rs  myapp.toml  prelude.rs  taterfs.toml
src/app/: app.rs  capacity_managers.rs  list_builder.rs  list_modifier.rs  list_search.rs  mod.rs  mod_dir_tree.rs  upload.rs
src/backend/: fs_backend.rs  fs_like_repo_backend.rs  fs_like_repo_backend_adapter.rs  http_backend.rs  memory_backend.rs  mod.rs  repo_backend.rs  s3_backend.rs
src/caches/: cache_db.rs  caching_key_value_db.rs  file_store_cache.rs  key_value_db.rs  lmdb_key_value_db.rs  local_chunks_cache.rs  mod.rs  object_cache_db.rs  repo_cache.rs  repository_cache.rs
src/cli/: args.rs  command_context.rs  mod.rs
src/commands/: list.rs  mod.rs  upload_directory.rs
src/config/: config_helper.rs  mod.rs  read_config.rs  types.rs
src/download/: download.rs  download_actions.rs  mod.rs
src/file_source/: directory_list.rs  error.rs  file_chunks.rs  file_source.rs  fs_file_source.rs  ignoring_file_source.rs  memory_file_source.rs  mod.rs  s3_file_source.rs  types.rs
src/file_store/: chunk_sizes.rs  create_file_store.rs  file_store.rs  fs_file_store.rs  memory_file_store.rs  mod.rs  (+2 more)
(+67 files in other folders)
