[package]
name = "taterfs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "macros"] }
time  = { version = "0.3", features = ["formatting"] }
rand  = "0.9.2"
ignore = "0.4"
serde = { version="1", features=["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
bytes = "1"
serde_jcs = "0.1"
hex = "0.4.3"
anyhow = "1.0.99"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1.9.0"
clap = {version = "4.5.47", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "fmt"]}
figment = {version = "0.10.19", features = ["env", "toml"]}
clap_complete = "4.5.57"
shellexpand = "3.1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2" # for best-effort directory fsync
