[package]
name = "taterfs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
