[package]
name = "taterfs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4.3"
configparser = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
